// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders it with showAccount 1`] = `
<nav
  className="pt-4 navbar navbar-expand navbar-light"
>
  <div
    className="container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <div
        style={
          Object {
            "height": 82,
            "width": 106,
          }
        }
      />
    </div>
    <div
      className="align-items-center align-self-center navbar-nav"
      onKeyDown={[Function]}
    >
       
       
      <div
        className="spinner-border text-primary"
      />
    </div>
  </div>
</nav>
`;

exports[`NavBar renders it with showBrandIcon 1`] = `
<nav
  className="pt-4 navbar navbar-expand navbar-light"
>
  <div
    className="container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="KappaSigmaMu Logo"
          src="kappa-sigma-mu-logo.svg"
          width={90}
        />
      </a>
    </div>
    <div
      className="align-items-center align-self-center navbar-nav"
      onKeyDown={[Function]}
    >
       
       
    </div>
  </div>
</nav>
`;

exports[`NavBar renders it with showExploreButton 1`] = `
<nav
  className="pt-4 navbar navbar-expand navbar-light"
>
  <div
    className="container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <div
        style={
          Object {
            "height": 82,
            "width": 106,
          }
        }
      />
    </div>
    <div
      className="align-items-center align-self-center navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rr-ui-event-key={null}
        disabled={false}
        href="/explore"
        onClick={[Function]}
      >
        Explore
      </a>
       
       
    </div>
  </div>
</nav>
`;

exports[`NavBar renders it with showSocialIcons 1`] = `
<nav
  className="pt-4 navbar navbar-expand navbar-light"
>
  <div
    className="container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <div
        style={
          Object {
            "height": 82,
            "width": 106,
          }
        }
      />
    </div>
    <div
      className="align-items-center align-self-center navbar-nav"
      onKeyDown={[Function]}
    >
       
      <div
        className="me-2"
      >
        <a
          className="sc-jSMfEi"
          href="https://discord.gg/9AWjTf8wSk"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Discord Logo"
            src="discord-logo.svg"
          />
        </a>
         
        <a
          className="sc-jSMfEi"
          href="https://matrix.to/#/!BUmiAAnAYSRGarqwOt:matrix.parity.io?via=matrix.parity.io"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Element Logo"
            src="element-logo.svg"
          />
        </a>
         
        <a
          className="sc-jSMfEi"
          href="https://twitter.com/kusamanetwork"
          rel="noreferrer"
          target="_blank"
        >
          <img
            alt="Twitter Logo"
            src="twitter-logo.svg"
            style={
              Object {
                "color": "red",
              }
            }
          />
        </a>
      </div>
       
    </div>
  </div>
</nav>
`;
